--- a/src/main/resources/templates/user_details/_review.html
+++ b/src/main/resources/templates/user_details/_review.html
@@ -48,8 +48,9 @@
                         <div class="media-body">
                             <h5 class="review_date date"
                                 th:text="${#dates.format(review.getUploadDate(), 'dd-MM-yyyy')}"></h5>
-                            <!-- TODO empty -->
-                            <h4 th:text="${review.getReviewTitle()}"></h4>
+                            <span th:if="${review.getReviewTitle() != null}">
+                                <h4 th:text="${review.getReviewTitle()}"></h4>
+                            </span>
                             <i class="review_star fa"
                                th:classappend="${review.getScoreOutOf5() >= 1} ? 'fa-star' : 'fa-star-o'"></i>
                             <i class="review_star fa"
@@ -68,11 +69,12 @@
                 <!-- Product -->
                 <div class="col-lg-4 vertical_center">
 
-                    <div class="row vertical_center">
-                        <div class="col-lg-10 vertical_center">
-                            <div class="product-row d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-start mr-auto">
-                                <a th:href="@{/product}">
+                    <div class="row ">
+                        <div class="col-lg-10">
+                            <div class="product-row d-flex">
+                                <a th:href="@{'/product/' + ${review.getProductId()}}">
                                     <div>
+                                        <!-- TODO -->
                                         <div class="product_image"><img th:src="@{/static/images/seker_portakali.jpg}"
                                                                         alt=""
                                                                         class="product_image_img">
@@ -80,19 +82,49 @@
                                     </div>
                                     <div class="product_name_container">
                                         <div class="review-product-name txt-left"><a
-                                                th:href="@{/product}">My Sweet Orange Tree</a>
+                                                th:text="${productService.get(review.getProductId()).getProductName()}"
+                                                th:href="@{'/product/' + ${review.getProductId()}}"></a>
                                         </div>
-                                        <div class="review-product-text">José Mauro de Vasconcelos</div>
+
+                                        <!-- Book, E-Book, Audio Book -->
+                                        <span th:if="${productService.get(review.getProductId()).getProductTypeName() == 'Book' ||
+                                                    productService.get(review.getProductId()).getProductTypeName() == 'E-Book' ||
+                                                    productService.get(review.getProductId()).getProductTypeName() == 'Audio Book'}">
+                                            <div class="review-product-text">
+                                                <span th:each="a, iterStat : ${productService.get(review.getProductId()).getAuthors()}"
+                                                      th:text="!${iterStat.last} ? ${a} + ', ': ${a}"></span>
+                                            </div>
+                                        </span>
+
+                                        <!-- E-Book Reader -->
+                                        <span th:if="${productService.get(review.getProductId()).getProductTypeName() == 'E-Book Reader'}">
+                                            <div class="review-product-text"
+                                                 th:text="${productService.get(review.getProductId()).getReaderBrand()}">
+                                            </div>
+                                        </span>
+
+                                        <!-- E-Book Reader Case, Book Case -->
+                                        <span th:if="${productService.get(review.getProductId()).getProductTypeName() == 'E-Book Reader Case' ||
+                                                    productService.get(review.getProductId()).getProductTypeName() == 'Book Case'}">
+                                            <div class="review-product-text"
+                                                 th:text="${productService.get(review.getProductId()).getCaseBrand()}">
+                                            </div>
+                                        </span>
+
                                     </div>
                                 </a>
                             </div>
                         </div>
+
                         <div class="col-lg-2 vertical_center">
                             <!-- Delete button -->
-                            <a href="#" class="trans_200" data-toggle="collapse"><i
-                                    style="font-size: 25px; color: #4a4a4a"
-                                    class="fa product_text"
-                                    title="Delete this review">&#xf014;</i></a>
+                            <button type="submit" value="&#xf014;"
+                                    class="delete_review trans_200 fa product_text" name="delete_review"
+                                    th:id="${review.getReviewId()}" title="Delete this review"
+                                    style="font-size: 24px; color: #4a4a4a; display: block"
+                                    data-toggle="collapse">
+                                &#xf014;
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -108,7 +140,7 @@
             <ul class="d-flex flex-row align-items-start justify-content-center">
                 <!-- Previous button -->
                 <li th:style="${currentPage == 1} ? 'display:none'">
-                    <a th:href="@{/user-details#review(id=${user.getUserId()}, size=${reviewPage.size}, page=${currentPage - 1})}"
+                    <a th:href="@{/user-details/{id}#review(id=${user.getUserId()}, size=${reviewPage.size}, page=${currentPage - 1})}"
                        aria-label="Previous" title="Previous Page"
                        rel="tooltip">
                         <i class="pagination_arrow fa fa-angle-left"></i>
@@ -118,7 +150,7 @@
                 <!-- First page -->
                 <li th:if="${reviewPage.totalPages > 0}"
                     th:class="${currentPage == 1} ? 'active'">
-                    <a th:href="@{/user-details#review(id=${user.getUserId()}, size=${reviewPage.size}, page=${1})}"
+                    <a th:href="@{/user-details/{id}#review(id=${user.getUserId()}, size=${reviewPage.size}, page=${1})}"
                        th:title="${'Page '+ 1}"
                        th:text="${1}" style="color: #fbaa1d;">
                     </a>
@@ -131,7 +163,7 @@
                     th:each="i : ${#numbers.sequence(currentPage - 2 > 1 ? currentPage - 2 : 2
                                     , reviewPage.totalPages > 2 + currentPage ? currentPage + 2 : reviewPage.totalPages - 1, 1)}"
                     th:class="${currentPage == i} ? 'active'">
-                    <a th:href="@{/user-details#review(id=${user.getUserId()}, size=${reviewPage.size}, page=${i})}"
+                    <a th:href="@{/user-details/{id}#review(id=${user.getUserId()}, size=${reviewPage.size}, page=${i})}"
                        th:text="${i}" th:title="${'Page '+ i}"
                        style="color: #fbaa1d;"></a>
                 </li>
@@ -142,7 +174,7 @@
                 <!-- Last page -->
                 <li th:if="${reviewPage.totalPages > 1}"
                     th:class="${currentPage == reviewPage.totalPages} ? 'active'">
-                    <a th:href="@{/user-details#review(id=${user.getUserId()}, size=${reviewPage.size}, page=${reviewPage.totalPages})}"
+                    <a th:href="@{/user-details/{id}#review(id=${user.getUserId()}, size=${reviewPage.size}, page=${reviewPage.totalPages})}"
                        th:text="${reviewPage.totalPages}"
                        style="color: #fbaa1d;"
                        th:title="${'Page '+ reviewPage.totalPages}">
@@ -151,7 +183,7 @@
 
                 <!-- Next button -->
                 <li th:style="${currentPage == reviewPage.totalPages} ? 'display:none'">
-                    <a th:href="@{/user-details#review(id=${user.getUserId()}, size=${reviewPage.size}, page=${currentPage + 1})}"
+                    <a th:href="@{/user-details/{id}#review(id=${user.getUserId()}, size=${reviewPage.size}, page=${currentPage + 1})}"
                        aria-label="Next" title="Next Page" rel="tooltip">
                         <i class="pagination_arrow fa fa-angle-right"></i>
                     </a>
@@ -172,6 +204,38 @@
 <script th:inline="javascript">
     /*<![CDATA[*/
 
+    var userId = /*[[${user.getUserId()}]]*/ 'default';
+
+    $('.delete_review').click(function (event) {
+        var ret = {
+            reviewId: $(this).attr("id")
+        };
+
+        if (confirm('Are you sure you want to delete?')) {
+            event.preventDefault();
+            $.post("/user-details/review/" + userId, ret, function (data) {
+                iziToast.show({
+                    title: 'Success',
+                    message: 'Review deleted successfully.',
+                    position: 'topRight',
+                    color: 'green'
+                });
+                window.location.href = "/user-details/" + userId + "#review";
+                setTimeout(function () {
+                    history.pushState(null, null, ' ');
+                }, 100);
+
+            }).fail(function (data) {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+                window.location.href = "/user-details/" + userId + "#review";
+            })
+        }
+    });
     /*]]>*/
 </script>
 
